--- a/src/core/components/header/header.scss
+++ b/src/core/components/header/header.scss
@@ -2,6 +2,7 @@
 
 .navbar {
   border-bottom: 0.2rem solid rgba($primary, 0.5);
+  background-color: $white;
   .header {
     padding: 1rem 4rem;
 
